syntax = "proto3";

option java_multiple_files = true;
option java_package = "user";
option java_outer_classname = "UserServiceOuterClass";

service UserService {
  rpc GetExistedUserOrCreateNewUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string name = 1;
  string email = 2;
  string picture = 3;
  string source = 4;
}

message UserResponse {
  string id = 1;
}